⚡Update ethcc embed and add type attribute
