# packages/server/src/swagger/swagger.json
@@ -1466,6 +1466,9 @@
 					},
 					"firebaseId": {
 						"type": "string"
+					},
+					"talkType": {
+						"type": "string"
 					}
 				},
 				"required": [
@@ -1641,6 +1644,9 @@
 					},
 					"firebaseId": {
 						"type": "string"
+					},
+					"talkType": {
+						"type": "string"
 					}
 				},
 				"required": [
@@ -1775,6 +1781,9 @@
 						"type": "array"
 					},
 					"firebaseId": {
+						"type": "string"
+					},
+					"talkType": {
 						"type": "string"
 					},
 					"autolabels": {
